@@ -5,6 +5,11 @@
 	* cvl/cvl_color.c: Fix description of cvl_channel_combine().
 	* cvl/cvl_io.c: cvl_write_pnm(): Fix writing of PNM frames with
 	unknown format.
+	* cvtool/cvtool.c, cvtool/cmd_channelcombine.c,
+	cvtool/cmd_channelextract.c, cvtool/Makefile.am, doc/cvtool.texi,
+	tests/cmd_channelcombine.sh, tests/cmd_channelextract.sh,
+	tests/Makefile.am: Split the channel command into the two new commands
+	channelextract and channelcombine for greater flexibility.
 
 2007-10-09  Martin Lambers <marlam@marlam.de>
 
